- fixed table vertical align
git-svn-id: svn://141.76.65.164/kp-salespoint@688 eb53f5e8-9ec5-4bc0-8d13-06c033283886

--- a/Calendar/WebContent/resources/css/style.css
+++ b/Calendar/WebContent/resources/css/style.css
@@ -112,7 +112,7 @@ table.calendar th {
 }
 
 table.calendar td {
-	valign:top;
+	vertical-align:top;
 	border-width: 1px;
 	padding: 0px;
 	margin: 0px;
@@ -129,6 +129,7 @@ div.dayNumber {
 }
 
 div.dayEntry {
+	font-size:150%;
     line-height: 150%;
     width: 100%;
     margin-left: 1em;
